# rust-exercises-copy

./: README.md
rust-chat-example/: Cargo.toml
rust-chat-example-book/: .env  .env.example  Cargo.toml
rust-chat-example-book/src/: main.rs  russh_connector.rs  ssh_driver.rs  telnet_connector.rs  utils.rs
rust-chat-example/src/: backup_main.rs  main.rs
